# smarthr_mcp_server

./: .dockerignore  .env_sample  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
smarthr_mcp_server/: auth.py  server.py
