[project]
name = "smarthr-mcp-server"
version = "0.1.0"
description = "SmartHR MCP Server for Employee and User Management"
authors = [
    {name = "Tomoya Goto", email = "tomoyagoto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "pydantic[email]>=2.0.0",
    "cachetools>=5.2.0",
    "fastmcp>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "mypy>=0.950",
    "black>=22.3.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smarthr_mcp_server"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']